--- a/index.html
+++ b/index.html
@@ -3,19 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multiplication Match-Up</title>
+    <title>Solo Multiplication Match-Up!</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Multiplication Match-Up</h1>
-        <p id="instructions">Player 1's Turn. Click on a product to cover it!</p>
+        <h1>Solo Multiplication Match-Up!</h1>
+        <p>Match the factors to a product!</p>
     </header>
 
-    <div id="game-container">
+    <div id="control-panel">
+        <div class="factor-display">
+            <div id="factor1" class="factor-bubble orange-bg">--</div>
+            <div id="factor2" class="factor-bubble purple-bg">--</div>
         </div>
+        <div id="match-box">
+            Your Match:<br>
+            <span id="match-text">-- x -- = --</span>
+        </div>
+    </div>
 
-    <button onclick="resetGame()">Start New Game</button>
+    <div id="game-window">
+        <h3>Multiplication Match-Up!</h3>
+        <div id="game-container">
+            </div>
+    </div>
+
+    <div id="stats">
+        Score: <span id="score">0</span> | 
+        Time Left: <span id="time-left">1:00</span>
+    </div>
+
+    <button id="new-game-button" onclick="resetGame()">New Game</button>
 
     <script src="script.js"></script>
 </body>
