--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Solo Multiplication Match-Up!</title>
+    <title>Multiplication Match-Up</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Solo Multiplication Match-Up!</h1>
+        <h1>Multiplication Match-Up!</h1>
         <p>Match the factors to a product!</p>
     </header>
 
@@ -27,14 +27,12 @@
         <h3>Multiplication Match-Up!</h3>
         <div id="game-container">
             </div>
+        <div id="stats">
+            Score: <span id="score">0</span> | 
+            Time Left: <span id="time-left">1:00</span>
+        </div>
+        <button id="new-game-button" onclick="resetGame()">New Game</button>
     </div>
-
-    <div id="stats">
-        Score: <span id="score">0</span> | 
-        Time Left: <span id="time-left">1:00</span>
-    </div>
-
-    <button id="new-game-button" onclick="resetGame()">New Game</button>
 
     <script src="script.js"></script>
 </body>
